--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==22.1.0
+certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
@@ -17,9 +18,11 @@ Pillow==9.3.0
 pydantic==1.10.2
 python-dotenv==0.21.0
 PyYAML==6.0
+requests==2.28.1
 sniffio==1.3.0
 starlette==0.20.4
 typing_extensions==4.4.0
+urllib3==1.26.12
 uvicorn==0.19.0
 watchfiles==0.18.1
 websockets==10.4
