Update Backend | Change Weather APi | Complete front

--- a/settings.ini
+++ b/settings.ini
@@ -3,3 +3,9 @@ API_URL = http://wttr.in/
 
 [WHERE_ARE_YOU]
 API_URL = http://ipwho.is/
+
+[GIF]
+RAIN = https://i.gifer.com/KTe5.gif
+SUN = https://i.gifer.com/1Zs8.gif
+CLOUDY = https://i.gifer.com/yQ5.gif
+SNOW = https://i.gifer.com/Dv9E.gif
