--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.8.3
+aiopygismeteo==5.0.2
 aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
@@ -16,6 +17,7 @@ idna==3.4
 multidict==6.0.2
 Pillow==9.3.0
 pydantic==1.10.2
+pygismeteo-base==3.0.5
 python-dotenv==0.21.0
 PyYAML==6.0
 requests==2.28.1
