--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -3,11 +3,17 @@ version: '3.8'
 services:
   api_weather:
     image: omdwork/how_your_weather
+    build:
+      context: ../
+      dockerfile: ./infra/Dockerfile-backend
     restart: always
     ports:
       - "8000:8000"
   nginx:
     image: omdwork/how_you_weather_static
+    build:
+      context: ../
+      dockerfile: ./infra/Dockerfile-nginx
     ports:
       - "80:80"
     depends_on:
